# rust-mongodb-axum

./: Cargo.toml  README.md  notes.md  rust-time-track-base.postman_collection.json  rust-warp-mongodb.postman_collection.json
src/: db.rs  error.rs  handler.rs  main.rs  project.rs  project_db_impl.rs  task.rs
src/controllers/: clients.rs  mod.rs  projects.rs  seed.rs  tasks.rs
src/database/: db.rs
src/db/: clients_db_impl.rs  db.rs  mod.rs  project_db_impl.rs  tasks_db_impl.rs
src/models/: client.rs  project.rs  task.rs
