[package]
name = "rust-mongodb-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.6"
tokio = { version = "1.12.0", features = ["full"] }
chrono = "0.4.19"
mongodb = "2.0.0"
serde = "1.0.130"
thiserror = "1.0"
axum-debug = "0.1.0"